--- a/web/themes/contrib/ensemble/less/fontello/demo.html
+++ b/web/themes/contrib/ensemble/less/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?60052360');
-      src: url('./font/fontello.eot?60052360#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?60052360') format('woff'),
-           url('./font/fontello.ttf?60052360') format('truetype'),
-           url('./font/fontello.svg?60052360#fontello') format('svg');
+      src: url('./font/fontello.eot?33092739');
+      src: url('./font/fontello.eot?33092739#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?33092739') format('woff'),
+           url('./font/fontello.ttf?33092739') format('truetype'),
+           url('./font/fontello.svg?33092739#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -430,69 +430,72 @@ body {
         <div class="the-icons span3" title="Code: 0xe857"><i class="demo-icon icon-quote-first">&#xe857;</i> <span class="i-name">icon-quote-first</span><span class="i-code">0xe857</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe858"><i class="demo-icon icon-cafe">&#xe858;</i> <span class="i-name">icon-cafe</span><span class="i-code">0xe858</span></div>
         <div class="the-icons span3" title="Code: 0xe859"><i class="demo-icon icon-right-dir-1">&#xe859;</i> <span class="i-name">icon-right-dir-1</span><span class="i-code">0xe859</span></div>
         <div class="the-icons span3" title="Code: 0xe85a"><i class="demo-icon icon-left-dir">&#xe85a;</i> <span class="i-name">icon-left-dir</span><span class="i-code">0xe85a</span></div>
         <div class="the-icons span3" title="Code: 0xe85c"><i class="demo-icon icon-linkedin-squared">&#xe85c;</i> <span class="i-name">icon-linkedin-squared</span><span class="i-code">0xe85c</span></div>
-        <div class="the-icons span3" title="Code: 0xe85d"><i class="demo-icon icon-linkedin">&#xe85d;</i> <span class="i-name">icon-linkedin</span><span class="i-code">0xe85d</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe85d"><i class="demo-icon icon-linkedin">&#xe85d;</i> <span class="i-name">icon-linkedin</span><span class="i-code">0xe85d</span></div>
         <div class="the-icons span3" title="Code: 0xe85e"><i class="demo-icon icon-viadeo">&#xe85e;</i> <span class="i-name">icon-viadeo</span><span class="i-code">0xe85e</span></div>
         <div class="the-icons span3" title="Code: 0xe85f"><i class="demo-icon icon-facebook-circled">&#xe85f;</i> <span class="i-name">icon-facebook-circled</span><span class="i-code">0xe85f</span></div>
         <div class="the-icons span3" title="Code: 0xe860"><i class="demo-icon icon-twitter-circled">&#xe860;</i> <span class="i-name">icon-twitter-circled</span><span class="i-code">0xe860</span></div>
-        <div class="the-icons span3" title="Code: 0xe861"><i class="demo-icon icon-gplus-circled">&#xe861;</i> <span class="i-name">icon-gplus-circled</span><span class="i-code">0xe861</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe861"><i class="demo-icon icon-gplus-circled">&#xe861;</i> <span class="i-name">icon-gplus-circled</span><span class="i-code">0xe861</span></div>
         <div class="the-icons span3" title="Code: 0xe862"><i class="demo-icon icon-edit">&#xe862;</i> <span class="i-name">icon-edit</span><span class="i-code">0xe862</span></div>
         <div class="the-icons span3" title="Code: 0xe863"><i class="demo-icon icon-edit-1">&#xe863;</i> <span class="i-name">icon-edit-1</span><span class="i-code">0xe863</span></div>
         <div class="the-icons span3" title="Code: 0xe864"><i class="demo-icon icon-th-large">&#xe864;</i> <span class="i-name">icon-th-large</span><span class="i-code">0xe864</span></div>
-        <div class="the-icons span3" title="Code: 0xe865"><i class="demo-icon icon-th">&#xe865;</i> <span class="i-name">icon-th</span><span class="i-code">0xe865</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe865"><i class="demo-icon icon-th">&#xe865;</i> <span class="i-name">icon-th</span><span class="i-code">0xe865</span></div>
         <div class="the-icons span3" title="Code: 0xe866"><i class="demo-icon icon-th-list">&#xe866;</i> <span class="i-name">icon-th-list</span><span class="i-code">0xe866</span></div>
         <div class="the-icons span3" title="Code: 0xe867"><i class="demo-icon icon-list">&#xe867;</i> <span class="i-name">icon-list</span><span class="i-code">0xe867</span></div>
         <div class="the-icons span3" title="Code: 0xe868"><i class="demo-icon icon-layout">&#xe868;</i> <span class="i-name">icon-layout</span><span class="i-code">0xe868</span></div>
-        <div class="the-icons span3" title="Code: 0xe869"><i class="demo-icon icon-menu">&#xe869;</i> <span class="i-name">icon-menu</span><span class="i-code">0xe869</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe869"><i class="demo-icon icon-menu">&#xe869;</i> <span class="i-name">icon-menu</span><span class="i-code">0xe869</span></div>
         <div class="the-icons span3" title="Code: 0xe86a"><i class="demo-icon icon-menu-outline">&#xe86a;</i> <span class="i-name">icon-menu-outline</span><span class="i-code">0xe86a</span></div>
         <div class="the-icons span3" title="Code: 0xe86b"><i class="demo-icon icon-menu-1">&#xe86b;</i> <span class="i-name">icon-menu-1</span><span class="i-code">0xe86b</span></div>
         <div class="the-icons span3" title="Code: 0xe86c"><i class="demo-icon icon-th-1">&#xe86c;</i> <span class="i-name">icon-th-1</span><span class="i-code">0xe86c</span></div>
-        <div class="the-icons span3" title="Code: 0xe86d"><i class="demo-icon icon-th-outline">&#xe86d;</i> <span class="i-name">icon-th-outline</span><span class="i-code">0xe86d</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe86d"><i class="demo-icon icon-th-outline">&#xe86d;</i> <span class="i-name">icon-th-outline</span><span class="i-code">0xe86d</span></div>
         <div class="the-icons span3" title="Code: 0xe86e"><i class="demo-icon icon-th-2">&#xe86e;</i> <span class="i-name">icon-th-2</span><span class="i-code">0xe86e</span></div>
         <div class="the-icons span3" title="Code: 0xe86f"><i class="demo-icon icon-th-large-outline">&#xe86f;</i> <span class="i-name">icon-th-large-outline</span><span class="i-code">0xe86f</span></div>
         <div class="the-icons span3" title="Code: 0xe870"><i class="demo-icon icon-th-large-1">&#xe870;</i> <span class="i-name">icon-th-large-1</span><span class="i-code">0xe870</span></div>
-        <div class="the-icons span3" title="Code: 0xe871"><i class="demo-icon icon-th-3">&#xe871;</i> <span class="i-name">icon-th-3</span><span class="i-code">0xe871</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe871"><i class="demo-icon icon-th-3">&#xe871;</i> <span class="i-name">icon-th-3</span><span class="i-code">0xe871</span></div>
         <div class="the-icons span3" title="Code: 0xe872"><i class="demo-icon icon-th-list-1">&#xe872;</i> <span class="i-name">icon-th-list-1</span><span class="i-code">0xe872</span></div>
         <div class="the-icons span3" title="Code: 0xe873"><i class="demo-icon icon-list-1">&#xe873;</i> <span class="i-name">icon-list-1</span><span class="i-code">0xe873</span></div>
         <div class="the-icons span3" title="Code: 0xe874"><i class="demo-icon icon-clipboard">&#xe874;</i> <span class="i-name">icon-clipboard</span><span class="i-code">0xe874</span></div>
-        <div class="the-icons span3" title="Code: 0xe875"><i class="demo-icon icon-location">&#xe875;</i> <span class="i-name">icon-location</span><span class="i-code">0xe875</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe875"><i class="demo-icon icon-location">&#xe875;</i> <span class="i-name">icon-location</span><span class="i-code">0xe875</span></div>
         <div class="the-icons span3" title="Code: 0xe876"><i class="demo-icon icon-location-1">&#xe876;</i> <span class="i-name">icon-location-1</span><span class="i-code">0xe876</span></div>
         <div class="the-icons span3" title="Code: 0xe877"><i class="demo-icon icon-location-outline">&#xe877;</i> <span class="i-name">icon-location-outline</span><span class="i-code">0xe877</span></div>
         <div class="the-icons span3" title="Code: 0xe878"><i class="demo-icon icon-location-2">&#xe878;</i> <span class="i-name">icon-location-2</span><span class="i-code">0xe878</span></div>
-        <div class="the-icons span3" title="Code: 0xe879"><i class="demo-icon icon-location-3">&#xe879;</i> <span class="i-name">icon-location-3</span><span class="i-code">0xe879</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe879"><i class="demo-icon icon-location-3">&#xe879;</i> <span class="i-name">icon-location-3</span><span class="i-code">0xe879</span></div>
         <div class="the-icons span3" title="Code: 0xe87a"><i class="demo-icon icon-emo-thumbsup">&#xe87a;</i> <span class="i-name">icon-emo-thumbsup</span><span class="i-code">0xe87a</span></div>
         <div class="the-icons span3" title="Code: 0xe87b"><i class="demo-icon icon-thumbs-up">&#xe87b;</i> <span class="i-name">icon-thumbs-up</span><span class="i-code">0xe87b</span></div>
         <div class="the-icons span3" title="Code: 0xe87c"><i class="demo-icon icon-thumbs-down">&#xe87c;</i> <span class="i-name">icon-thumbs-down</span><span class="i-code">0xe87c</span></div>
-        <div class="the-icons span3" title="Code: 0xe87d"><i class="demo-icon icon-heart">&#xe87d;</i> <span class="i-name">icon-heart</span><span class="i-code">0xe87d</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe87d"><i class="demo-icon icon-heart">&#xe87d;</i> <span class="i-name">icon-heart</span><span class="i-code">0xe87d</span></div>
         <div class="the-icons span3" title="Code: 0xe87e"><i class="demo-icon icon-thumbs-up-1">&#xe87e;</i> <span class="i-name">icon-thumbs-up-1</span><span class="i-code">0xe87e</span></div>
         <div class="the-icons span3" title="Code: 0xf028"><i class="demo-icon icon-heart-broken">&#xf028;</i> <span class="i-name">icon-heart-broken</span><span class="i-code">0xf028</span></div>
         <div class="the-icons span3" title="Code: 0xf031"><i class="demo-icon icon-location-4">&#xf031;</i> <span class="i-name">icon-location-4</span><span class="i-code">0xf031</span></div>
-        <div class="the-icons span3" title="Code: 0xf0c8"><i class="demo-icon icon-blank">&#xf0c8;</i> <span class="i-name">icon-blank</span><span class="i-code">0xf0c8</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf0c8"><i class="demo-icon icon-blank">&#xf0c8;</i> <span class="i-name">icon-blank</span><span class="i-code">0xf0c8</span></div>
         <div class="the-icons span3" title="Code: 0xf0ca"><i class="demo-icon icon-list-bullet">&#xf0ca;</i> <span class="i-name">icon-list-bullet</span><span class="i-code">0xf0ca</span></div>
         <div class="the-icons span3" title="Code: 0xf0cb"><i class="demo-icon icon-list-numbered">&#xf0cb;</i> <span class="i-name">icon-list-numbered</span><span class="i-code">0xf0cb</span></div>
         <div class="the-icons span3" title="Code: 0xf164"><i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf165"><i class="demo-icon icon-thumbs-down-alt">&#xf165;</i> <span class="i-name">icon-thumbs-down-alt</span><span class="i-code">0xf165</span></div>
       </div>
     </div>
