--- a/web/themes/contrib/ensemble/less/fontello/demo.html
+++ b/web/themes/contrib/ensemble/less/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?3244390');
-      src: url('./font/fontello.eot?3244390#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?3244390') format('woff'),
-           url('./font/fontello.ttf?3244390') format('truetype'),
-           url('./font/fontello.svg?3244390#fontello') format('svg');
+      src: url('./font/fontello.eot?73348659');
+      src: url('./font/fontello.eot?73348659#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?73348659') format('woff'),
+           url('./font/fontello.ttf?73348659') format('truetype'),
+           url('./font/fontello.svg?73348659#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -509,6 +509,12 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe88c"><i class="demo-icon icon-group-circled">&#xe88c;</i> <span class="i-name">icon-group-circled</span><span class="i-code">0xe88c</span></div>
+        <div class="the-icons span3" title="Code: 0xe88d"><i class="demo-icon icon-leaf">&#xe88d;</i> <span class="i-name">icon-leaf</span><span class="i-code">0xe88d</span></div>
+        <div class="the-icons span3" title="Code: 0xe88e"><i class="demo-icon icon-leaf-1">&#xe88e;</i> <span class="i-name">icon-leaf-1</span><span class="i-code">0xe88e</span></div>
+        <div class="the-icons span3" title="Code: 0xe88f"><i class="demo-icon icon-leaf-2">&#xe88f;</i> <span class="i-name">icon-leaf-2</span><span class="i-code">0xe88f</span></div>
+      </div>
+      <div class="row">
+        <div class="the-icons span3" title="Code: 0xe890"><i class="demo-icon icon-leaf-3">&#xe890;</i> <span class="i-name">icon-leaf-3</span><span class="i-code">0xe890</span></div>
         <div class="the-icons span3" title="Code: 0xf028"><i class="demo-icon icon-heart-broken">&#xf028;</i> <span class="i-name">icon-heart-broken</span><span class="i-code">0xf028</span></div>
         <div class="the-icons span3" title="Code: 0xf031"><i class="demo-icon icon-location-4">&#xf031;</i> <span class="i-name">icon-location-4</span><span class="i-code">0xf031</span></div>
         <div class="the-icons span3" title="Code: 0xf0c8"><i class="demo-icon icon-blank">&#xf0c8;</i> <span class="i-name">icon-blank</span><span class="i-code">0xf0c8</span></div>
