--- a/web/themes/contrib/ensemble/less/fontello/demo.html
+++ b/web/themes/contrib/ensemble/less/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?73348659');
-      src: url('./font/fontello.eot?73348659#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?73348659') format('woff'),
-           url('./font/fontello.ttf?73348659') format('truetype'),
-           url('./font/fontello.svg?73348659#fontello') format('svg');
+      src: url('./font/fontello.eot?21859337');
+      src: url('./font/fontello.eot?21859337#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?21859337') format('woff'),
+           url('./font/fontello.ttf?21859337') format('truetype'),
+           url('./font/fontello.svg?21859337#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -515,17 +515,25 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe890"><i class="demo-icon icon-leaf-3">&#xe890;</i> <span class="i-name">icon-leaf-3</span><span class="i-code">0xe890</span></div>
+        <div class="the-icons span3" title="Code: 0xe891"><i class="demo-icon icon-clock-1">&#xe891;</i> <span class="i-name">icon-clock-1</span><span class="i-code">0xe891</span></div>
+        <div class="the-icons span3" title="Code: 0xe892"><i class="demo-icon icon-back-in-time">&#xe892;</i> <span class="i-name">icon-back-in-time</span><span class="i-code">0xe892</span></div>
+        <div class="the-icons span3" title="Code: 0xe893"><i class="demo-icon icon-clock">&#xe893;</i> <span class="i-name">icon-clock</span><span class="i-code">0xe893</span></div>
+      </div>
+      <div class="row">
+        <div class="the-icons span3" title="Code: 0xe894"><i class="demo-icon icon-clock-alt">&#xe894;</i> <span class="i-name">icon-clock-alt</span><span class="i-code">0xe894</span></div>
+        <div class="the-icons span3" title="Code: 0xe895"><i class="demo-icon icon-clock-2">&#xe895;</i> <span class="i-name">icon-clock-2</span><span class="i-code">0xe895</span></div>
+        <div class="the-icons span3" title="Code: 0xe896"><i class="demo-icon icon-clock-3">&#xe896;</i> <span class="i-name">icon-clock-3</span><span class="i-code">0xe896</span></div>
         <div class="the-icons span3" title="Code: 0xf028"><i class="demo-icon icon-heart-broken">&#xf028;</i> <span class="i-name">icon-heart-broken</span><span class="i-code">0xf028</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf031"><i class="demo-icon icon-location-4">&#xf031;</i> <span class="i-name">icon-location-4</span><span class="i-code">0xf031</span></div>
         <div class="the-icons span3" title="Code: 0xf0c8"><i class="demo-icon icon-blank">&#xf0c8;</i> <span class="i-name">icon-blank</span><span class="i-code">0xf0c8</span></div>
-      </div>
-      <div class="row">
         <div class="the-icons span3" title="Code: 0xf0ca"><i class="demo-icon icon-list-bullet">&#xf0ca;</i> <span class="i-name">icon-list-bullet</span><span class="i-code">0xf0ca</span></div>
         <div class="the-icons span3" title="Code: 0xf0cb"><i class="demo-icon icon-list-numbered">&#xf0cb;</i> <span class="i-name">icon-list-numbered</span><span class="i-code">0xf0cb</span></div>
-        <div class="the-icons span3" title="Code: 0xf0eb"><i class="demo-icon icon-lightbulb-1">&#xf0eb;</i> <span class="i-name">icon-lightbulb-1</span><span class="i-code">0xf0eb</span></div>
-        <div class="the-icons span3" title="Code: 0xf164"><i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf0eb"><i class="demo-icon icon-lightbulb-1">&#xf0eb;</i> <span class="i-name">icon-lightbulb-1</span><span class="i-code">0xf0eb</span></div>
+        <div class="the-icons span3" title="Code: 0xf164"><i class="demo-icon icon-thumbs-up-alt">&#xf164;</i> <span class="i-name">icon-thumbs-up-alt</span><span class="i-code">0xf164</span></div>
         <div class="the-icons span3" title="Code: 0xf165"><i class="demo-icon icon-thumbs-down-alt">&#xf165;</i> <span class="i-name">icon-thumbs-down-alt</span><span class="i-code">0xf165</span></div>
         <div class="the-icons span3" title="Code: 0xf1bb"><i class="demo-icon icon-tree-1">&#xf1bb;</i> <span class="i-name">icon-tree-1</span><span class="i-code">0xf1bb</span></div>
       </div>
